fix: scrollbar showing

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@tailwind utilities;
 
 @custom-variant dark (&:where(.dark, .dark *));
 
@@ -25,4 +26,15 @@ html {
 html.dark {
     background-color: var(--color-background-dark);
     color: var(--color-secondary-dark);
+}
+
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
 }
